k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudmart-backend
  namespace: cloudmart
spec:
  replicas: 2
  selector:
    matchLabels: {app: cloudmart-backend}
  template:
    metadata:
      labels: {app: cloudmart-backend}
    spec:
      containers:
        - name: backend
          image: YOUR_DOCKERHUB_USER/cloudmart-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: {path: /api/health, port: 8000}
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /api/health, port: 8000}
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-backend
  namespace: cloudmart
spec:
  selector: {app: cloudmart-backend}
  ports:
    - port: 8000
      targetPort: 8000
