k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudmart-frontend
  namespace: cloudmart
spec:
  replicas: 2
  selector:
    matchLabels: {app: cloudmart-frontend}
  template:
    metadata:
      labels: {app: cloudmart-frontend}
    spec:
      containers:
        - name: frontend
          image: YOUR_DOCKERHUB_USER/cloudmart-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cloudmart-frontend
  namespace: cloudmart
spec:
  selector: {app: cloudmart-frontend}
  ports:
    - port: 80
      targetPort: 80
