k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudmart
  namespace: cloudmart
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: cloudmart.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudmart-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudmart-frontend
                port:
                  number: 80
